<resources>
    <string name="default_web_client_id">1063873527410-4pte50gh9jnn116dirrl6qm3q1ffc3o0.apps.googleusercontent.com</string>
    <string name="app_name">myApplication</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update_event_title_hint">Update Event Title</string>
    <string name="update_event_note_hint">Update Event Note</string>
    <string name="title_prefix">Title : </string>
    <string name="note_prefix">Note : </string>
    <string name="update_button_label">Update</string>
    <string name="delete_confirmation_title">Confirm Delete</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this event?</string>
    <string name="event_deleted_successfully">Event deleted successfully</string>
    <string name="error_deleting_event">Error deleting event</string>
    <string name="score_label">Score:</string>
    <string name="report_label">Report</string>
    <string name="open_report_button_label">Open Report</string>
    <string name="diagnostic_label">Diagnostic test:</string>
    <string name="weight_data">Enter your weight in kg </string>
    <string name="height_data">Enter your height in cm</string>
    <string name="RiskLevel">Risk level :</string>
    <string name="UserAnswer">Answer :</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="birthday_label">Birthday:</string>
    <string name="pain_average_label">Pain Average:</string>
    <string name="diagnostic_report_title">Diagnostic Test Report</string>
    <string name="Low">Low</string>
    <string name="Medium">Medium</string>
    <string name="High">High</string>
    <string name="No_Risk">Ready</string>
    <string name="home">Home</string>
    <string name="track">Track</string>
    <string name="community">Community</string>
    <string name="Publish">Publish</string>
    <string name="Publish_blog">Publish Blog</string>
    <string name="select_img">Select an Image!!</string>
    <string name="Write_comment">Write Comment</string>
    <string name="Add">Add</string>
    <string name="Search_blogs">Search Blogs</string>
    <string name="share_btn">Share</string>
    <string name="shared">Shared</string>
    <string name="confirm_delete_comment">Do you want to delete this comment?</string>
    <string name="pain_evolution">Pain evolution</string>
    <string name="pain_average">Pain Average :</string>
    <string name="pain_score">Pain scores</string>
    <string name="pain_locations">Pain Locations</string>
    <string name="symptoms">Symptoms</string>
    <string name="pain_worse_title">What Makes Pain Worse?</string>
    <string name="feelings">Feelings</string>
    <string name="medications">Medications</string>
    <string name="choose_topic">Choose Topic</string>
    <string name="endometriosis_label">Endometriosis</string>
    <string name="fertility_label">Fertility</string>
    <string name="intimate_health_label">Intimate Health</string>
    <string name="menstrual_cycle">Menstrual Cycle</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quiz_congratulation">You\'ve successfully completed the Quiz</string>
    <string name="diagnostic_txt">Do you suffer from painful periods? \nTake this questionnaire to find out your risk for endometriosis.</string>
    <string name="go">GO</string>
    <string name="diag_result">Test result</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="title...">Title&#8230;</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="Repeat">Repeat : </string>
    <string name="faq_label">Most frequently asked questions</string>
    <string name="endo_faq_title">Endometriosis FAQ</string>
    <string name="last_score">Last score</string>
    <string name="home_score_desc">Update your score regularly</string>
    <string name="home_title">What are you looking for : </string>
    <string name="diagnostic_test">Diagnostic test</string>
    <string name="diagnostic_test_desc">Discover your potential endometriosis diagnosis.</string>
    <string name="endo_informations">Endo Informations</string>
    <string name="endo_informations_desc">Stay informed about endometriosis.</string>
    <string name="pain_evolution_desc">Explore your pain journey.</string>
    <string name="quiz_desc">Test your knowledge about endometriosis.</string>
    <string name="today">Today</string>
    <string name="pain_level">Pain Level</string>
    <string name="alarmslist">Alarms list</string>
    <string name="Profile">Profile</string>
    <string name="alarm">Alarm</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_language">Change language</string>
    <string name="notif_settings">Notifications settings</string>
    <string name="share_app">Share app</string>
    <string name="logout">Logout</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="Calendar">Calendar</string>
    <string name="AboutUs">About Us</string>
    <string name="choose_language">Choose a Language</string>
    <string name="about_us_text">The PainCare m-Health solution was developed with the goal of providing comprehensive resources and assistance to women who are struggling with endometriosis. It aims to assist individuals by giving them access to customized symptom tracking, educational materials, and a supportive community. The main goal is to provide women with endometriosis with a user-friendly and accessible tool for pain-management, information, and emotional support in order to improve their overall wellness and quality of life. This includes women who suspect they may have the condition. With PainCare, women can take control of their condition and move towards a happier and healthier life.</string>
    <string name="References">References</string>
    <string name="link1_label">advancedgynaecologymelbourne</string>
    <string name="link2_label">mayoclinic</string>
    <string name="link3_label">clevelandclinic</string>
    <string name="link1_url">https://www.advancedgynaecologymelbourne.com.au/endometriosis/symptoms</string>
    <string name="link2_url">https://www.mayoclinic.org/diseases-conditions/endometriosis/symptoms-causes/syc-20354656#:~:text=However%2C%20there%20are%20some%20factors,having%20a%20low%20body%20mass</string>
    <string name="link3_url">https://my.clevelandclinic.org/health/diseases/10857-endometriosis</string>
    <string name="AddEvent">Add Event</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_message">Are you sure you want to delete your account?</string>
    <string name="delete_data_radio_label">Delete Data</string>
    <string name="keep_data_radio_label">Keep Data</string>
    <string name="welcome_label">Get Started with PainCare</string>
    <string name="Endo_Symptoms">What are the symptoms of Endometriosis?</string>
    <string name="Endometriosis">What is Endometriosis ?</string>
    <string name="Endo_riskFactors">What can raise my chances of suffering from Endometriosis?</string>
    <string name="Endo_traitement">How is Endometriosis treated?</string>
    <string name="Endo_reduces">How can I reduce my chances of getting Endometriosis?</string>
    <string name="Endo_health_prob">How is Endometriosis treated?</string>
    <string name="Endo_importance">Why is it important to find out if I have Endometriosis?</string>
    <string name="Endo_Symptoms_answer">The most common symptom of Endometriosis is pelvic pain. The pain often occurs with menstruation, during ovulation, and/or in connection with sexual intercourse. However, a woman with Endometriosis may also experience pain at other times during her monthly cycle. Another symptom is infertility. Some women with Endometriosis also experience severe fatigue.</string>
    <string name="Endometriosis_answer"> Endometriosis is a condition where tissue similar to the lining of the uterus is also found elsewhere in the body, mainly in the abdominal cavity.</string>
    <string name="Endo_riskFactors_answer">You are more likely to get Endometriosis if you have: \n•Never had children. \n•Menstrual periods that last more than seven days. \n•Short menstrual cycles (27 days or less). \n•A family member (mother, aunt, sister) with Endometriosis.\n•A health problem that prevents normal passage of menstrual blood flow. \n•Damage to the cells in the pelvis from an infection.</string>
    <string name="Endo_traitement_answer"> There is no cure for Endometriosis, but there are many treatments for the pain and infertility it causes. Talk with your doctor about what option is best for you. The treatment you choose will depend on your symptoms, age, and plans for getting pregnant.\nPain Medication -— For some women with mild symptoms, doctors may suggest taking over-the-counter medicines for pain.\nHormone Treatment — When pain medicine is not enough, doctors often recommend hormone medicines to treat Endometriosis. Only women who do not wish to become pregnant, can use these drugs.\n Surgery — Surgery is usually the best choice for women with severe Endometriosis with many growths, a great deal of pain, or fertility problems. </string>
    <string name="Endo_reducess_answer">Keep lower estrogen levels in your body.  Try: \n•Exercising regularly. \n•Keeping a low amount of body fat. \n•Avoiding large amounts of alcohol and drinks with caffeine</string>
    <string name="Endo_health_prob_answer">Growths of Endometriosis are benign (not cancerous), but they still can cause many problems. Tissue and blood that is shed into the body can cause inflammation, scar tissue, and pain. As endometrial tissue grows, it can cover or grow into the ovaries and block the fallopian tubes. Trapped blood in the ovaries can form cysts as well as cause inflammation scarring (adhesions) that sometimes bind organs together. This scar tissue may cause pelvic pain and make it difficult for women to get pregnant. The growths can also cause problems in the intestines and bladder.</string>
    <string name="background">background</string>
    <string name="go_back">go back</string>
    <string name="logo">Logo</string>
    <string name="paincare">PainCare</string>
    <string name="image">Image</string>
    <string name="correct_answers">Correct Answers : 0</string>
    <string name="wrong_answers">Wrong Answers : 0</string>
    <string name="start_new_quiz">Start New Quiz</string>
    <string name="login_to">Login to</string>
    <string name="login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email">Enter your Email...</string>
    <string name="reset_password">Reset Password</string>
    <string name="lt_back_to_login"><![CDATA[<-- Back to Login]]></string>
    <string name="enter_your_password">Enter Your Password...</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="enter_your_e_mail">Enter Your E-mail...</string>
    <string name="enter_your_name">Enter your Name...</string>
    <string name="confirm_password">Confirm Password...</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="sign_up_for">Sign up for</string>
</resources>