<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context="com.spmenais.paincare.Authentification.logInActivity">

    <!-- Image at the Top -->
    <ImageView
        android:id="@+id/appImage"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_main"
        android:contentDescription="@string/image" />

    <!-- App Title -->
    <LinearLayout
        android:id="@+id/appTitleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appImage"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#333333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paincare"
            android:textSize="30sp"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/pink" />

    </LinearLayout>

    <!-- App Description -->
    <TextView
        android:id="@+id/appDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitleContainer"
        android:text="@string/login_to_your_account"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:gravity="center"/>

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appDescription"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_your_e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D8D8"
        android:textSize="16sp"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailinput"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D8D8"
        android:textSize="16sp"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />



    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordinput"
        android:layout_marginTop="16dp"
        android:background="@drawable/third_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <!-- Sign Up -->
    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpassword"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
