<!-- res/layout/dialog_update_event.xml -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextUpdateTitle"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:hint="@string/update_event_title_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextUpdateNote"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:hint="@string/update_event_note_hint"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonUpdateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:textColor="#89CCC5"
        android:background="@drawable/next_btn"
        android:layout_marginTop="8dp"
        android:text="@string/update_button_label"/>

</LinearLayout>
