<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context="com.spmenais.paincare.Authentification.SignUpActivity">

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_main"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/sign_up_for"
        android:textColor="#333333"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_alignStart="@id/appTitle"
        android:layout_marginStart="9dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/paincare"
        android:textColor="#FF5B74"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_marginTop="60dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D8D8"
        android:textSize="16sp"
        android:minHeight="48dp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameInput"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_your_e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D8D8"
        android:textSize="16sp"
        android:minHeight="48dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D8D8"
        android:textSize="16sp"
        android:minHeight="48dp" />

    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D8D8"
        android:textSize="16sp"
        android:minHeight="48dp" />

    <!-- Sign Up Button -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/third_btn"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Already have an account -->

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
