<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.spmenais.paincare.QuizResults">

    <ImageView
        android:id="@+id/congratulationsIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="111dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/congratulations"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/successTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:layout_below="@+id/congratulationsIcon"
        android:text="@string/quiz_congratulation"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>
    
    <LinearLayout
        android:layout_below="@id/successTextView"
        android:layout_marginTop="85dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correctAnswers"
            android:text="@string/correct_answers"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#3C9C92"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incorrectAnswers"
            android:layout_marginTop="5dp"
            android:text="@string/wrong_answers"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/pink"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNewQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/second_btn"
        android:text="@string/start_new_quiz"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

</RelativeLayout>