<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context="com.spmenais.paincare.Authentification.ForgotPasswordActivity">

    <!-- Image at the Top -->
    <ImageView
        android:id="@+id/appImage"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_main"
        android:contentDescription="@string/image" />

    <!-- App Title -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/appImage" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D8D8"
        android:textSize="16sp"
        android:minHeight="48dp" />

    <!-- Reset Password Button -->

    <!-- Back to Login Link -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/third_btn"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/backToLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPasswordButton"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="125dp"
        android:text="@string/lt_back_to_login"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
